hphp/test/slow/class_type_constant/recursion_generic_param.php.expectf
Fatal error: Cannot declare self-referencing type constant 'C::A' in %s/recursion_generic_param.php on line 13
